--- a/views/deletemovie.ejs
+++ b/views/deletemovie.ejs
@@ -20,20 +20,17 @@
                 </div>
             </div>
 
-            <div class="col-sm-4">
-                <div class="well">
-                    <h3>Look I'm A Sidebar!</h3>
-                </div>
-            </div>
             <b>
                 <form action="/movies/<%= locals.anId %>?_method=DELETE" method="POST">
-                    <label>WARNING: Are you sure you want to delete this movie?
-                        <input type="text" id="<%=locals.anId%>" name="movie" value="<%= title %> by <%= director %>"
-                            readonly>
-                    </label>
+                    <h3>WARNING: Are you sure you want to delete this movie? </h3> <br>
+                    <label>Title:</label>
+                    <input type="text" name="title" value="<%= title %>" readonly>
+                    <label>Directed By:</label>
+                    <input type="text" name="director" value="<%= director%>" readonly>
                     <p>Once completed this action cannot be undone.</p>
                     <button>Delete</button>
                 </form>
+                <a href="/movies"><button>Cancel</button></a>
             </b>
         </div>
     </main>
