Genres for each movie being displayed successfully. Cleaned up unecessary associated files as well.

--- a/views/deletemovie.ejs
+++ b/views/deletemovie.ejs
@@ -27,6 +27,8 @@
                     <input type="text" name="title" value="<%= title %>" readonly>
                     <label>Directed By:</label>
                     <input type="text" name="director" value="<%= director%>" readonly>
+                    <label>Description:</label>
+                    <input type="text" name="description" value="<%= description%>" readonly>
                     <p>Once completed this action cannot be undone.</p>
                     <button>Delete</button>
                 </form>
