--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -28,9 +28,9 @@
                     <h4>Movie Director: <%= movie.director%>
                     </h4>
                     <p>
-                        <%= movie.release_date %> <br>
-                            <%= movie.description %> <br>
-                                <%= movie.genre_name %>
+                        Release date: <%= movie.release_date %> <br>
+                            Description: <%= movie.description %> <br>
+                                Genre: <%= movie.genre_name %>
                     </p>
                     <p>
                         <a href="/movies/<%=movie.movie_id%>/edit">Edit</a>
