--- a/views/patchmovie.ejs
+++ b/views/patchmovie.ejs
@@ -25,6 +25,7 @@
                     <label>Edit movie title and director:
                         <input type="text" name="title" value="<%= title %>" required>
                         <input type="text" name="director" value="<%= director%>" required>
+                        <input type="text" name="description" value="<%= description%>" required>
                     </label>
                     <button>Edit</button>
                 </form>
