--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -22,21 +22,37 @@
 
             <% theMovies.forEach(movie=> { %>
                 <b>
+                    <p>
+
                     <h3>Movie Title: <%= movie.title %>
                     </h3>
 
                     <h4>Movie Director: <%= movie.director%>
                     </h4>
-                    <p>
-                        Release date: <%= movie.release_date %> <br>
-                            Description: <%= movie.description %> <br>
-                                Genre: <%= movie.genre_name %>
-                    </p>
-                    <p>
-                        <a href="/movies/<%=movie.movie_id%>/edit">Edit</a>
-                        <a href="/movies/<%=movie.movie_id%>/replace">Replace</a>
-                        <a href="/movies/<%=movie.movie_id%>/delete">Delete</a>
-                    </p>
+
+                    Release date: <%= movie.release_date.toLocaleDateString('en-US', {year: 'numeric' , month: 'long' ,
+                        day: 'numeric' }) %> <br>
+                        Description: <%= movie.description %> <br>
+                            Genre: <%= movie.genre_name %>
+
+                                </p>
+                                <!-- Chose to do the if statement based on the rating because the rating has the NOT NULL property.
+                    Therefore, if there's no rating, there is no review at all. -->
+                                <p>
+                                    <% if (movie.rating && movie.rating.length> 0) { %>
+                                        Reviews: <%= movie.rating %> <br>
+                                            <i>
+                                                <%= movie.review_text %>
+                                            </i>
+                                            <% } else { %>
+                                                <i>No reviews yet.</i>
+                                                <% } %>
+                                </p>
+                                <p>
+                                    <a href="/movies/<%=movie.movie_id%>/edit">Edit</a>
+                                    <a href="/movies/<%=movie.movie_id%>/replace">Replace</a>
+                                    <a href="/movies/<%=movie.movie_id%>/delete">Delete</a>
+                                </p>
 
 
                 </b><br>
