--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,11 +7,11 @@
         <li class="nav-item">
             <a class="nav-link" href="/movies">Movies</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
             <a class="nav-link" href="/genres">Genres</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/reviews">Reviews</a>
-        </li>
+        </li> -->
     </ul>
 </nav>
