--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -20,6 +20,20 @@
                 </div>
             </div>
 
+            <h3>Add Movie:</h3>
+            <form action="/movies" method="POST">
+                <label>Title</label>
+                <input type="text" id="title" name="title" required>
+                <label>Release Date</label>
+                <input type="date" id="release_date" name="release_date" required>
+                <label>Director</label>
+                <input type="text" id="director" name="director" required>
+                <label>Description</label>
+                <input type="text" id="description" name="description" required>
+
+                <button>Add</button>
+            </form>
+
             <% theMovies.forEach(movie=> { %>
                 <b>
                     <p>
@@ -57,6 +71,7 @@
 
                 </b><br>
                 <% }) %>
+
         </div>
     </main>
 
