POST review complete however need to deal with rendering issue.

--- a/views/allreviews.ejs
+++ b/views/allreviews.ejs
@@ -25,16 +25,20 @@
                     <h3>Look I'm A Sidebar!</h3>
                 </div>
             </div>
-            <% theReview.forEach(review=> { %>
-                <b>
-                    <p>
+            <% if (theReview && theReview.length> 0) { %>
+                <% theReview.forEach(review=> { %>
+                    <b>
+                        <p>
 
-                        Rating: <%= review.rating %> <br>
-                            <%= review.review_text %> <br>
-                    </p>
-                </b>
-                <% }) %>
-                    <a href="/movies">Back</a>
+                            Rating: <%= review.rating %> <br>
+                                <%= review.review_text %> <br>
+                        </p>
+                    </b>
+                    <% }) %>
+                        <% } else { %>
+                            <p>No reviews found.</p>
+                            <% } %>
+                                <a href="/movies">Back</a>
         </div>
     </main>
 
