--- a/views/postreview.ejs
+++ b/views/postreview.ejs
@@ -27,7 +27,7 @@
                     <input type="number" id="rating" name="rating" min="1" max="5" step="0.5" required>
                     <label for="review_text">Review Text:</label>
                     <textarea id="review_text" name="review_text" required></textarea> <br>
-                    <button type="submit">Submit Review</button>
+                    <button>Submit Review</button>
                 </form>
                 <a href="/movies"><button>Cancel</button></a>
             </b>
