--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,14 +5,13 @@
     <%- include('../partials/head'); %>
 </head>
 
+<header>
+    <%- include('../partials/header'); %>
+</header>
+
 <body class="container">
-
-    <header>
-        <%- include('../partials/header'); %>
-    </header>
-
     <main>
-        <div class="jumbotron">
+        <div>
             <h1>Movie Archive</h1>
             <p>Testing EJS</p>
         </div>
