--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,17 +1,11 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">All About Movies</a>
-    <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
+<nav>
+    <h1>Movie Archive</h1>
+    <ul>
+        <li>
+            <a href="/">Home</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/movies">Movies</a>
+        <li>
+            <a href="/movies">Movies</a>
         </li>
-        <!-- <li class="nav-item">
-            <a class="nav-link" href="/genres">Genres</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/reviews">Reviews</a>
-        </li> -->
     </ul>
 </nav>
