--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,9 @@
 <nav>
-    <h1>Movie Archive</h1>
-    <ul>
-        <li>
-            <a href="/">Home</a>
-        </li>
-        <li>
-            <a href="/movies">Movies</a>
-        </li>
-    </ul>
+    <h1 class="nav-item-1"><i class="fa-solid fa-ticket"></i> Movie Archive</h1>
+    <h3 class="nav-item-2">
+        <a href="/">Home</a>
+    </h3>
+    <h3 class="nav-item-3">
+        <a href="/movies">Movies</a>
+    </h3>
 </nav>
