--- a/views/400.ejs
+++ b/views/400.ejs
@@ -12,21 +12,18 @@
     </header>
 
     <main>
-        <div class="row">
-            <div class="col-sm-8">
-                <div class="jumbotron">
-                    <h1>ERROR</h1>
-                    <p>400 Bad Request</p>
-                </div>
+        <div class="container">
+
+            <div class="movies">
+                <h1>ERROR</h1>
             </div>
 
-            <div class="col-sm-4">
-                <div class="well">
-                    <h3>Look I'm A Sidebar!</h3>
-                </div>
+            <div class="movie">
+                <h1>400</h1>
+                <h2>Bad Request</h2>
+                <p>The server cannot or will not process the request due to something that is perceived to be a client
+                    error.</p>
             </div>
-            <p>The server cannot or will not process the request due to something that is perceived to be a client
-                error.</p>
         </div>
     </main>
 
