--- a/views/404.ejs
+++ b/views/404.ejs
@@ -12,20 +12,17 @@
     </header>
 
     <main>
-        <div class="row">
-            <div class="col-sm-8">
-                <div class="jumbotron">
-                    <h1>ERROR</h1>
-                    <p>404 Not Found</p>
-                </div>
+        <div class="container">
+
+            <div class="movies">
+                <h1>ERROR</h1>
             </div>
 
-            <div class="col-sm-4">
-                <div class="well">
-                    <h3>Look I'm A Sidebar!</h3>
-                </div>
+            <div class="movie">
+                <h1>404</h1>
+                <h2>Not Found</h2>
+                <p>The server cannot find the requested resource.</p>
             </div>
-            <p>The server cannot find the requested resource.</p>
         </div>
     </main>
 
