--- a/views/500.ejs
+++ b/views/500.ejs
@@ -12,20 +12,17 @@
     </header>
 
     <main>
-        <div class="row">
-            <div class="col-sm-8">
-                <div class="jumbotron">
-                    <h1>ERROR</h1>
-                    <p>500 Internal Server Error</p>
-                </div>
-            </div>
+        <div class="container">
 
-            <div class="col-sm-4">
-                <div class="well">
-                    <h3>Look I'm A Sidebar!</h3>
-                </div>
+            <div class="movies">
+                <h1>ERROR</h1>
+
             </div>
-            <p>The server encountered something unexpected that prevented it from fulfilling the request.</p>
+            <div class="movie">
+                <h1>500</h1>
+                <h2>Internal Server Error</h2>
+                <p>The server encountered something unexpected that prevented it from fulfilling the request.</p>
+            </div>
         </div>
     </main>
 
