--- a/views/deletemovie.ejs
+++ b/views/deletemovie.ejs
@@ -12,15 +12,15 @@
     </header>
 
     <main>
-        <div class="row">
-            <div class="col-sm-8">
-                <div class="jumbotron">
-                    <h1>Movies</h1>
-                    <p>Check out all the movies</p>
-                </div>
+        <div class="container">
+
+            <div class="movies">
+                <h1>Movies</h1>
+                <p>Delete a Movie</p>
+
             </div>
 
-            <b>
+            <div class="movie">
                 <form action="/movies/<%= locals.anId %>?_method=DELETE" method="POST">
                     <h3>WARNING: Are you sure you want to delete this movie? </h3> <br>
                     <label>Title:</label>
@@ -30,10 +30,10 @@
                     <label>Description:</label>
                     <input type="text" name="description" value="<%= description%>" readonly>
                     <p>Once completed this action cannot be undone.</p>
-                    <button>Delete</button>
+                    <button class="button">Delete</button>
                 </form>
-                <a href="/movies"><button>Cancel</button></a>
-            </b>
+                <a href="/movies"><button class="button">Cancel</button></a>
+            </div>
         </div>
     </main>
 
