--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,3 +2,4 @@
 <title>Movie Archive</title>
 
 <link rel="stylesheet" href="/styles.css">
+<script src="https://kit.fontawesome.com/ee6bbf619a.js" crossorigin="anonymous"></script>
