--- a/views/deletemovie.ejs
+++ b/views/deletemovie.ejs
@@ -22,7 +22,9 @@
 
             <div class="movie">
                 <form action="/movies/<%= locals.anId %>?_method=DELETE" method="POST">
-                    <h3>WARNING: Are you sure you want to delete this movie? </h3> <br>
+                    <h3><i class="fa-solid fa-triangle-exclamation"></i> WARNING: Are you sure you want to delete
+                        this
+                        movie? </h3> <br>
                     <label>Title:</label>
                     <input type="text" name="title" value="<%= title %>" readonly>
                     <label>Directed By:</label>
