--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,9 +11,11 @@
 
 <body class="container">
     <main>
-        <div>
-            <h1>Movie Archive</h1>
-            <p>Testing EJS</p>
+        <div class="movies">
+            <h1>Home</h1>
+        </div>
+        <div class="movie">
+            <h2>Under Construction... <i class="fa-solid fa-hammer"></i></h2>
         </div>
     </main>
 
