--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -12,20 +12,20 @@
     </header>
 
     <main>
-        <div class="row">
-            <div class="col-sm-8">
-                <div class="jumbotron">
-                    <h1>Movies</h1>
-                    <p>Check out all the movies</p>
-                </div>
+        <div class="container">
+            <div class="movies">
+                <h1>Movie</h1>
             </div>
 
-            <% if (theMovie.length> 0) var movie=theMovie[0]; { %>
-                <b>
-                    <h3>Movie Title: <%= movie.title %>
-                    </h3>
+            <div class="movie">
+                <!-- Check if there is at least one movie -->
+                <% if (theMovie.length> 0) var movie=theMovie[0]; { %>
 
-                    <h4>Movie Director: <%= movie.director%>
+                    <h2><i class="fa-solid fa-clapperboard"></i>
+                        <%= movie.title %>
+                    </h2>
+
+                    <h4>Directed By: <%= movie.director%>
                     </h4>
                     <p>
                         Release date: <%= movie.release_date.toLocaleDateString('en-US', {year: 'numeric' ,
@@ -36,18 +36,19 @@
 
                     <p>
                         <% if (movie.rating && movie.rating.length> 0) { %>
-                            Reviews: <%= movie.rating %> <br>
-                                <i>
-                                    <%= movie.review_text %>
-                                </i>
-                                <% } else { %>
-                                    <i>No reviews yet.</i>
-                                    <% } %>
+                            Reviews: <%= movie.rating %> <i class="fa-solid fa-star"></i><br>
+                                <div class="review-quote">
+                                    <i>
+                                        "<%= movie.review_text %>"
+                                    </i>
+                                    <% } else { %>
+                                        <i>No reviews yet.</i>
+                                        <% } %>
+                                </div>
                     </p>
-                </b><br>
-                <% } %>
-
-
+                    <br>
+                    <% } %>
+            </div>
         </div>
     </main>
 
