--- a/views/patchmovie.ejs
+++ b/views/patchmovie.ejs
@@ -5,32 +5,32 @@
     <%- include('./partials/head'); %>
 </head>
 
-<body>
+<body class="container">
 
     <header>
         <%- include('./partials/header'); %>
     </header>
 
     <main>
-        <div class="container">
-            <div class="movies">
-                <h1>Movies</h1>
-                <p>Edit a Movie</p>
-            </div>
 
-
-            <div class="movie">
-                <form action="/movies/<%= locals.anId %>?_method=PATCH" method="POST">
-                    <label>Edit movie title and director:
-                        <input type="text" name="title" value="<%= title %>" required>
-                        <input type="text" name="director" value="<%= director%>" required>
-                        <input type="text" name="description" value="<%= description%>" required>
-                    </label>
-                    <button class="button">Edit</button>
-                </form>
-                <a href="/movies"><button class="button">Cancel</button></a>
-            </div>
+        <div class="movies">
+            <h1>Movies</h1>
+            <p>Edit a Movie</p>
         </div>
+
+
+        <div class="movie">
+            <form action="/movies/<%= locals.anId %>?_method=PATCH" method="POST">
+                <label>Edit movie title and director:
+                    <input type="text" name="title" value="<%= title %>" required>
+                    <input type="text" name="director" value="<%= director%>" required>
+                    <input type="text" name="description" value="<%= description%>" required>
+                </label>
+                <button class="button">Edit</button>
+            </form>
+            <a href="/movies"><button class="button">Cancel</button></a>
+        </div>
+
     </main>
 
     <footer>
