--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -70,7 +70,7 @@
                     Therefore, if there's no rating, there is no review at all. -->
                         <div class="review-text">
                             <% if (movie.rating && movie.rating.length> 0) { %>
-                                <h3>Most Recent Review:</h3>
+                                <h3>Reviews Preview:</h3>
                                 Rating: <%= movie.rating %> <i class="fa-solid fa-star"></i><br> <br>
                                     <div class="review-quote">
                                         <i>
